// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxFieldArray expect to render with default checked fields 1`] = `
<DocumentFragment>
  <div
    class="pf-c-check"
  >
    <input
      aria-invalid="false"
      class="pf-c-check__input"
      data-ouia-component-id="OUIA-Generated-Checkbox-1"
      data-ouia-component-type="PF4/Checkbox"
      data-ouia-safe="true"
      id="12345"
      name="policies[0]"
      type="checkbox"
      value="12345"
    />
    <label
      class="pf-c-check__label"
      for="12345"
    >
      pci
    </label>
  </div>
  <div
    class="pf-c-check"
  >
    <input
      aria-invalid="false"
      checked=""
      class="pf-c-check__input"
      data-ouia-component-id="OUIA-Generated-Checkbox-2"
      data-ouia-component-type="PF4/Checkbox"
      data-ouia-safe="true"
      id="1111"
      name="policies[1]"
      type="checkbox"
      value="1111"
    />
    <label
      class="pf-c-check__label"
      for="1111"
    >
      hipaa
    </label>
  </div>
</DocumentFragment>
`;

exports[`CheckboxFieldArray expect to render without default checked fields 1`] = `
<DocumentFragment>
  <div
    class="pf-c-check"
  >
    <input
      aria-invalid="false"
      class="pf-c-check__input"
      data-ouia-component-id="OUIA-Generated-Checkbox-3"
      data-ouia-component-type="PF4/Checkbox"
      data-ouia-safe="true"
      id="12345"
      name="policies[0]"
      type="checkbox"
      value="12345"
    />
    <label
      class="pf-c-check__label"
      for="12345"
    >
      pci
    </label>
  </div>
  <div
    class="pf-c-check"
  >
    <input
      aria-invalid="false"
      class="pf-c-check__input"
      data-ouia-component-id="OUIA-Generated-Checkbox-4"
      data-ouia-component-type="PF4/Checkbox"
      data-ouia-safe="true"
      id="1111"
      name="policies[1]"
      type="checkbox"
      value="1111"
    />
    <label
      class="pf-c-check__label"
      for="1111"
    >
      hipaa
    </label>
  </div>
</DocumentFragment>
`;
